# hypexplorer

./: .gitignore  README.md
langchain_fastapi_langfuse_docker/: Dockerfile  README.md  compose.yaml  example.env  main.py  requirements.txt
langchain_fastapi_langfuse_docker/bruno_api_client/LangChain FastAPI/: bruno.json  chat.bru  register.bru  token.bru
langchain_ollama/: ollama_langchain.ipynb
langchain_ollama/bruno_client_ollama_api/ollama admin tasks/: Show Model Information.bru
langchain_ollama/bruno_client_ollama_api/ollama chat/: Chat request (with tools).bru
langchain_ollama/bruno_client_ollama_api/ollama embed/: Generate Embeddings (Multiple).bru
langchain_ollama/bruno_client_ollama_api/ollama generate/: bruno.json  generate json output.bru  (+2 more)
langchain_ollama_temporal/: README.md  activities.py  pyproject.toml  starter.py  workflow.py
python_langchain_ollama/: ollama_instructor.ipynb  ollama_langchain.ipynb  ollama_langchain_instructor.ipynb  ollama_python.ipynb  pyproject.toml
python_langchain_ollama/bruno_client_ollama_api/ollama admin tasks/: bruno.json
python_langchain_ollama/bruno_client_ollama_api/ollama chat/: Chat Request (Not Streaming).bru  Chat Request (Streaming).bru  Chat request (Reproducible outputs).bru  Chat request (With Images).bru  bruno.json
python_langchain_ollama/bruno_client_ollama_api/ollama embed/: Generate Embeddings (Single).bru  bruno.json
python_langchain_ollama/bruno_client_ollama_api/ollama generate/: generate custom options.bru  generate reproducible (with seed).bru  load model into memory.bru
