[tool.poetry]
name = "langchain-ollama-temporal"
version = "0.1.0"
description = ""
authors = ["Anton Suharev <asuharev@asu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.6"
langchain-ollama = "^0.2.0"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
tqdm = "^4.66.6"
temporalio = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"